# Tiny-CPlayer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  compile_commands.json
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
buildback/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
buildback/.cmake/api/v1/reply/: cache-v2-835abd250faeb697f1d0.json  cmakeFiles-v1-74e2c2db8ad52f8b876b.json  codemodel-v2-53f2fc31ab23725b98b2.json  directory-.-Debug-f7e0e02a811badafacb7.json  directory-_deps.ftxui-build-Debug-745fa7569564b864fd0c.json  directory-_deps.ftxui-build.doc-Debug-e998f064116a34def2ce.json  directory-_deps.ftxui-build.examples-Debug-a9c6dfd982195558d1c0.json  directory-cAudio-Debug-ee50e387754827507e4c.json  directory-cAudio.DependenciesSource.libogg-1.2.2-Debug-d31d8a47326e9fdc1b3e.json  directory-cAudio.DependenciesSource.libvorbis-1.3.2-Debug-4f1bb51cb52a975c20fc.json  directory-cAudio.Plugins.mp3Decoder-Debug-c0372968447d41ea47d1.json  directory-cAudio.cAudio-Debug-0c06f9de7485bec7cfd6.json  index-2025-12-30T11-19-42-0982.json  target-Git__Git-Debug-71488bb229d214d24c1a.json  target-Ogg-Debug-09347090ea6d23c98789.json  target-OpenAL__OpenAL-Debug-cd3cdf078bdb4b585074.json  target-TagLib__tag-Debug-7161f541bb00cff14fd5.json  target-TagLib__tag_c-Debug-bc46f2715954f42f7d85.json  target-Threads__Threads-Debug-cc9632f749c70e889571.json  target-Vorbis-Debug-f71985be472ad611782a.json  target-cAp_mp3Decoder-Debug-30d040465584fed00187.json  target-cAudio-Debug-df979f7a5a98f2bf5a0e.json  target-component-Debug-b8375ed73fb37f6bb764.json  target-dom-Debug-eb3a92d32f869f3552e1.json  target-main_enter-Debug-f0e36248a5efbc53a6d2.json  target-screen-Debug-c849eb154a38731f3eba.json
buildback/cAudio/: Makefile  cmake_install.cmake
buildback/cAudio/DependenciesSource/libogg-1.2.2/: Makefile  cmake_install.cmake
buildback/cAudio/DependenciesSource/libvorbis-1.3.2/: Makefile  cmake_install.cmake
buildback/cAudio/Plugins/mp3Decoder/: Makefile  cmake_install.cmake  libcAp_mp3Decoder.so.2.3.0
buildback/cAudio/cAudio/: Makefile  cmake_install.cmake
src/: AudioPlayer.hpp  File.hpp  FolderViewer.hpp  Image.hpp  MetadataParser.hpp  SavedMusicList.hpp  Timer.hpp  UserInterface.hpp  main.cpp  main_hehe.cpp
tests/: test_audio_metadata.cpp  test_file.cpp  test_timer.cpp
